# markdown-viewer

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml  update-cask.yml
Casks/: markdown-viewer.rb
making_icon/: make_icon_260720.py
samples/: demo.md  linked.md  manual-checklist.md
samples/themes/: ocean.css  sepia.css
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: markdown.ts  types.ts
