[package]
name = "markdown-viewer"
version = "0.1.0"
description = "A macOS markdown viewer built with Tauri"
authors = ["kobayashi"]
edition = "2021"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
mime_guess = "2.0.5"
notify = "8.2.0"
parking_lot = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
urlencoding = "2.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6.2", features = ["alloc"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSData", "NSError", "NSString"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "WKPDFConfiguration", "WKWebView"] }

[dev-dependencies]
tempfile = "3"
